Wed Jul  8 10:47:51 CDT 1998  Larry Ewing  <lewing@gimp.org>

	* app/preferences_dialog.c: replaced old invalidate calls
	with an iteration over gimages.

	* app/layer.c: added an assert to check for gimage != NULL.

1998-07-08  Chris Lahey  <clahey@umich.edu>

	* app/menus.c (toolbox_entries): Made it so that you won't get two
	document indexes open at the same time.  (docindex.c assumes that
	you only have one open.)

	* app/docindex.h: Added a function to close the document index
	from outside docindex.c.

	* app/docindex.c: Got rid of warnings about isspace().
	(create_idea_toolbar): Got rid of the warnings about pixmaps.
	(close_idea_window): Added a function to close the document index
	from outside docindex.c.
	(idea_hide_callback): Made this function work correctly if called
	when ideas is NULL.

	* app/app_procs.c (really_quit_callback):
	(app_exit): Made it so that the document index saves even if you
	quit without closing it.

	* app/fileops.c (file_save): Made Save As add to the document index.

1998-07-08  Chris Lahey  <clahey@umich.edu>

	* app/docindex.h: 
	* app/docindex.c: New files containing the document index.

	* app/menus.c (toolbox_entries): Added a menu item to open the
	Document Index.

	* app/Makefile.am (gimp_SOURCES): Added docindex.c and
	docindex.h.

	* app/fileops.c (file_open): Made it so that opening a file adds
	to the document index.

Wed Jul  8 01:38:15 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* Makefile.am blend.c boundary.c by_color_select.c channel.c
 	* color_picker.c drawable_cmds.c fuzzy_select.c gimpimage.c
 	* image_render.c ink.c layer.c main.c paint_core.c paint_funcs.c
 	* pixel_region.c plug_in.c tile.c tile.h tile_cache.c tile_manager.c
 	* tile_swap.c transform_core.c undo.c xcf.c: split off tile_pvt.h
	from tile.h so changes in the tile implementation don't force a
	complete recompile.

Wed Jul  8 01:35:22 EEST 1998  Lauri Alanko <nether@gimp.org>
